Added JWT user authentication